--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,7 @@ body {
     font-size: 2rem;
     letter-spacing: 0.3rem;
     padding-bottom: 1rem;
+    text-align: center;
 }
 
 /* Typwriter effect */
